aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__and__tests__and_lit_reg.snap
---
source: aya-assembly/src/parser/instructions/and.rs
expression: result
---
Instruction(
    AndLitReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        HexLiteral(
            ByteOffset {
                start: 9,
                end: 13,
            },
        ),
    ),
)
