aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__and__tests__and_lit_reg_var.snap
---
source: aya-assembly/src/parser/instructions/and.rs
expression: result
---
Instruction(
    AndLitReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        Var(
            ByteOffset {
                start: 9,
                end: 12,
            },
        ),
    ),
)
