aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__and__tests__and_reg_reg.snap
---
source: aya-assembly/src/parser/instructions/and.rs
expression: result
---
Instruction(
    AndRegReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        Register(
            ByteOffset {
                start: 8,
                end: 10,
            },
        ),
    ),
)
